# group_39

./: .gitignore  Dockerfile  README.md  WDPS.py  augment_data.py  classifier.py  embedding.py  entity_linker.py  entity_linker2.py  example_output_2.txt  example_using_llm.py  extract_answer.py  fact_checker.py  generate_questions.py  llm_client.py  main.py  pyproject.toml  question.py  question_augmented_format.csv  question_processor.py  requirements.txt  test_input.txt  train_classifier.py  train_type_classifier.py  train_yesno_classifier.py  yesno_dataset_format.csv  yesno_example.csv
files/: README.md  classifier.py  entity_linker.py  example_using_llm.py  extract_answer.py  fact_checker.py  generate_questions.py  main.py  question.py  question_augmented.csv  question_augmented_format.csv  question_processor.py  requirements.txt  train_yesno_classifier.py  training_input.csv  yesno_dataset.csv  yesno_dataset_format.csv
files/utils/: augment_data.py  data_format.py  yesno_data_format.py
utils/: augment_data_format.py  data_format.py
